--- a/style.css
+++ b/style.css
@@ -54,14 +54,16 @@ header {
 }
 
 .main__title {
-   max-width: 15ch;
+   min-width: 15ch;
+   max-width: 30ch;
    font-size: 3rem;
    font-weight: 600;
    color: var(--dark-grayish-blue);
 }
 
 .main__description {
-   width: 30ch;
+   min-width: 30ch;
+   max-width: 50ch;
    margin-top: 2rem;
    font-size: 1.6rem;
    font-weight: 400;
@@ -73,7 +75,7 @@ header {
    display: flex;
    flex-direction: column;
    gap: 2rem;
-   width: 100%;
+   width: 31rem;
    margin-top: 4rem;   
 }
 
@@ -92,6 +94,9 @@ header {
 
 /* snippets section */
 .snippets {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
    margin-top: 15rem;
    text-align: center;
 }
@@ -101,13 +106,19 @@ header {
 }
 
 .snippets__description {
-   width: 30ch;
+   min-width: 30ch;
+   max-width: 50ch;
    margin-top: 2rem;
    margin-bottom: 6rem;
    font-size: 1.6rem;
    font-weight: 400;
    line-height: 1.6;
    color: var(--grayish-blue);
+}
+
+.snippets__img-container {
+   min-width: 30rem;
+   max-width: 45rem;
 }
 
 .functions {
@@ -124,7 +135,8 @@ header {
 }
 
 .functions__description {
-   width: 30ch;
+   min-width: 30ch;
+   max-width: 40ch;
    font-size: 1.6rem;
    font-weight: 400;
    line-height: 1.6;
@@ -136,7 +148,7 @@ header {
 .access {
    display: flex;
    flex-direction: column;
-   align-content: center;
+   align-items: center; /*fixed*/
    margin-top: 18rem;
 }
 
@@ -146,11 +158,17 @@ header {
 }
 
 .access__description {
+   min-width: 30ch;
+   margin-bottom: 5rem;
    font-size: 1.6rem;
    line-height: 1.6;
    font-weight: 400;
    color: var(--grayish-blue);
-   margin-bottom: 5rem;
+}
+
+.access__img-container {
+   min-width: 30rem;
+   max-width: 45rem;
 }
 
 
@@ -221,6 +239,14 @@ header {
    margin-top: 10rem;
 }
 
+@media (min-width: 768px) {
+   .company {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+   }
+}
+
 /* logos size */
 .company__icon {
    display: inline-block;  
@@ -271,7 +297,8 @@ header {
 }
 
 .app__description {
-   width: 29.5ch;
+   min-width: 29.5ch;
+   max-width: 50ch;
    font-size: 1.6rem;
    line-height: 1.6;
    color: var(--grayish-blue);
@@ -328,3 +355,31 @@ footer {
 .footer-social__link i {
    font-size: 2.8rem;
 }
+
+@media (min-width: 768px){
+   footer {
+      flex-direction: row;
+      justify-content: space-around;
+   }
+   
+   .footer-links {
+      flex-direction: row;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+      min-width: 32rem;
+      max-width: 40rem;
+   }
+
+   .footer-links a {
+      margin-right: 2rem;
+   }
+
+   .footer-social__media {
+      gap: 2rem;
+   }
+}
+/* I couldn't place the links as the layout :( */
+
+
+/* Write media queries at the end
+of the respective section */
